# CashRegister

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: pyproject.toml
backend/src/cash_register/: __init__.py  api.py  change.py  cli.py  currency.py  domain.py  parser.py  policy.py  processor.py
backend/tests/: test_api.py  test_api_endpoint.py  test_api_models.py  test_change.py  test_cli.py  test_parser.py  test_policy.py  test_processor.py  test_smoke.py  test_text_processor.py
docs/: ARCHITECTURE.md  PROJECT_PLAN.md
docs/ai/: DECISION_LOG.md  REQUIREMENT_DOCS.md  SELF_CRITIQUE.md  TOOLS.md  TRANSCRIPT.md  VERIFICATION.md
frontend/: .env.example  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: cashRegister.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
frontend/src/adapters/: httpChangeGateway.test.ts  httpChangeGateway.ts
frontend/src/components/: DenominationToken.css  DenominationToken.test.tsx  DenominationToken.tsx  OutputPanel.css  OutputPanel.test.tsx  OutputPanel.tsx  Snackbar.css  Snackbar.test.tsx  Snackbar.tsx
frontend/src/domain/: change.test.ts  change.ts  denominations.test.ts  denominations.ts
frontend/src/hooks/: useChangeWorkflow.test.ts  useChangeWorkflow.ts  useSubmitChange.test.ts  useSubmitChange.ts
frontend/src/screens/: CashRegisterScreen.css  ChangeScreen.css  (+4 more)
prompts/: prompts.md
standards/: base-sdlc.md  python-cli.md  python-fastapi.md  ts-react-vite.md
(+8 files in other folders)
