[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cash-register"
version = "0.1.0"
description = "Cash register change calculator for Creative Cash Draw Solutions"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
api = ["fastapi>=0.110", "uvicorn>=0.30", "httpx2>=1.0"]

[project.scripts]
cash-register = "cash_register.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
